<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/memeImageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#000000"
        android:contentDescription="@string/showing_meme"
        app:layout_constraintBottom_toTopOf="@+id/prevButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:srcCompat="@tools:sample/avatars" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/memeImageView"
        app:layout_constraintEnd_toEndOf="@+id/memeImageView"
        app:layout_constraintStart_toStartOf="@+id/memeImageView"
        app:layout_constraintTop_toTopOf="@id/memeImageView" />

    <ImageButton
        android:id="@+id/shareButton"
        android:layout_width="41dp"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/black"
        android:contentDescription="@string/sharebuttonimage"
        android:onClick="shareMeme"
        android:padding="30dp"
        android:src="@android:drawable/ic_menu_share"
        android:text="@string/share"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.098"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@android:drawable/ic_menu_share" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:textColor="@color/white"
        android:padding="30dp"
        android:backgroundTint="@color/nextButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        android:onClick="showNextMeme" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <ImageButton
        android:id="@+id/downloadButton"
        android:layout_width="38dp"
        android:layout_height="37dp"
        android:layout_marginTop="20dp"
        android:background="@color/black"
        android:contentDescription="@string/downloadbuttonimage"
        android:onClick="downloadMeme"
        android:src="@android:drawable/stat_sys_download"
        android:text="@string/download"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.903"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/prevButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="prevMeme"
        android:text="@string/prev"
        android:textColor="@color/white"
        android:padding="30dp"
        android:backgroundTint="@color/shareButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>